--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
                 <div class="col-md-10 img-wrap">
                     <img class="lazyload" data-sizes="auto"
                         data-original-src="./assets/prod/images/prep_header_img.jpg">
+
                 </div>
                 <div class="usp-block-wrapper col-12">
                     <div class="row justify-content-center mb-5">
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-last order-first">
+                        <div class="col-lg-3 col-md-6 col-10 pb-5 order-md-last order-first">
                             <div class="usp d-flex ">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/saves.svg" alt="">
@@ -193,7 +194,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-3 order-2">
+                        <div class="col-lg-3 col-md-6 col-10 pb-5 order-md-3 order-2">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/file.svg" alt="">
@@ -203,7 +204,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-2 order-3">
+                        <div class="col-lg-3 col-md-6 col-10 pb-5 order-md-2 order-3">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/thousand.svg" alt="">
@@ -213,7 +214,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-12 pb-5 order-md-first order-last">
+                        <div class="col-lg-3 col-md-6 col-10 pb-5 order-md-first order-last">
                             <div class="usp d-flex">
                                 <div class="icon d-flex">
                                     <img src="assets/prod/svgs/ten.svg" alt="">
@@ -476,16 +477,16 @@
                         <h2 class="text-center">Our Partners And Memberships</h2>
                     </div>
                 </div>
-                <div class="logo-wrap">
-                    <div class=" logo">
+                <div class="row justify-content-center">
+                    <div class="col-md-4 col-10 logo text-center ">
                         <img class="lazyload" data-sizes="auto"
                             data-original-src="./assets/prod/images/family_law_practitioners_association.jpg">
                     </div>
-                    <div class=" logo">
-                        <img class="lazyload" data-sizes="auto"
-                            data-original-src="./assets/prod/images/flpa_member.jpg">
+                    <div class="col-md-4 col-10 logo text-center">
+                            <img class="lazyload" data-sizes="auto"
+                                data-original-src="./assets/prod/images/flpa_member.jpg">
                     </div>
-                    <div class=" logo">
+                    <div class="col-md-4 col-10 logo text-center">
                         <img class="lazyload" data-sizes="auto"
                             data-original-src="./assets/prod/images/queensland_law_society_member.jpg">
                     </div>
@@ -530,7 +531,7 @@
                     <img class="sharpen img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image mx-auto d-none d-md-block"
                         data-original-src="./assets/prod/images/loop_banner.png">
 
-                        <img class="sharpen img-fluid mb-5 mb-lg-0 view-animation fade-left mx-auto d-block d-md-none"
+                    <img class="sharpen img-fluid mb-5 mb-lg-0 view-animation fade-left mx-auto d-block d-md-none"
                         data-original-src="./assets/prod/images/loop-banner-mob.png">
                 </div>
                 <div class="col-md-6">
@@ -547,7 +548,7 @@
 
                     </p>
                 </div>
-       
+
             </div>
             <div class="row justify-content-center align-items-center">
                 <div class="btn-section text-md-center">
@@ -1348,8 +1349,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 text-center">
-                    <div class="eyebrow">LIMITED SPOTS AVAILABLE IN <span class="output"></span> </div>
-                    <h2>The Legal Drafter's 'Rapid' <br class="d-md-block d-none">
+                    <!-- <div class="eyebrow">LIMITED SPOTS AVAILABLE IN <span class="output"></span> </div> -->
+                    <h2>Get The Legal Drafter's 'Rapid'
+
+                        <br class="d-md-block d-none">
                         Consent Orders Package
                     </h2>
                     <h3 class="subhead">Fixed Fee Of Just $1,300</h3>
@@ -1358,14 +1361,14 @@
 
             </div>
 
-            <!-- <div class="row body-social-reviews mx-auto d-flex justify-content-center">
+            <div class="row body-social-reviews mx-auto d-flex justify-content-center d-block d-md-none pt-3 mt-3">
                 <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews_body.svg"
                     alt="5 Star Google Review">
-            </div> -->
+            </div>
 
             <div class="row justify-content-center align-items-center content-wrapper">
                 <div class="col-md-10 col-lg-6 order-last form-text">
-                    <h5 class="text-center text-lg-start">
+                    <h5 class="text-lg-center text-start text-lg-start">
                         Agreed to terms and ready to finalise your relationship? Our 'Rapid' Consent Orders Package
                         includes everything you need:
                     </h5>
@@ -1386,8 +1389,12 @@
                             Includes property, financial settlements, parenting arrangements & superannuation split.
                         </li>
                     </ul>
+                    <div class="body-social-reviews pt-4 d-none d-md-block">
+                        <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews_body.svg"
+                            alt="5 Star Google Review">
+                    </div>
                 </div>
-                <div class="col-md-10 col-lg-6 order-first form-img">
+                <div class="col-md-10 col-lg-6 col-8 order-first form-img ">
                     <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
                         data-original-src="./assets/prod/images/a4_consent_app.png">
                 </div>
