--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,7 @@
     </section>
 
 
-    <section class="rapid-consent less-pad">
+    <section class="rapid-consent ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 text-center">
@@ -1361,7 +1361,7 @@
 
             </div>
 
-            <div class="row body-social-reviews mx-auto d-flex justify-content-center d-block d-md-none pt-3 mt-3">
+            <div class="row body-social-reviews mx-auto d-flex justify-content-center d-block d-md-none pt-4 mt-4">
                 <img class="sharpen" src="./assets/prod/svgs/google_facebook_5_star_reviews_body.svg"
                     alt="5 Star Google Review">
             </div>
