Text alignment fix

--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
 
             <div class="row justify-content-center align-items-center content-wrapper">
                 <div class="col-md-10 col-lg-6 order-last form-text">
-                    <h5 class="text-lg-center text-start text-lg-start">
+                    <h5 class=" text-center text-lg-start">
                         Agreed to terms and ready to finalise your relationship? Our 'Rapid' Consent Orders Package
                         includes everything you need:
                     </h5>
