--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </h1>
                     <p class="subheadline col-lg-9 mx-auto d-none d-md-block pb-5">
                         Want to put your relationship behind you… without dealing with money-hungry suits who use it to
-                        fill their own pockets? Get Consent Orders prepared Inside 24 Hours… so you can feel the weight
+                        fill their own pockets? Get Consent Orders prepared inside 24 Hours… so you can feel the weight
                         lift from your shoulders and finally move on with your life!</p>
                 </div>
                 <div class="col-md-8 col-lg-6">
@@ -200,7 +200,7 @@
                                     <img src="assets/prod/svgs/file.svg" alt="">
                                 </div>
                                 <div class="copy">
-                                    File with the courts <br> in 20 hours
+                                    File with the courts <br> in 24 hours
                                 </div>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                     </p>
                     <p class="pb-5">
                         I have 10+ years' experience in family law and have prepared almost 1,000 Consent Orders. I can
-                        put your agreement into legally-enforceable terms and file it with the courts Inside 24 Hours.
+                        put your agreement into legally-enforceable terms and file it with the courts inside 24 Hours.
                         <br> You'll have peace of mind moving forward and be able to transition to the next stage of
                         your life as soon as possible.
                     </p>
