--- a/index.html
+++ b/index.html
@@ -1516,6 +1516,23 @@
                                         required />
                                 </div>
 
+                                <div class="form-group">
+                                    <label class="sr-only d-none" for="settlement">Property/Financial Settlement</label>
+                                    <span class='icon icon-name'><img src="./assets/prod/svgs/icon-settlement.svg"
+                                            alt="Icon Settlement"></span>
+                                    <input type="text" class="settlement" name="Property/Financial-Settlement Required?"
+                                        id="settlement" placeholder="Do you require a property/financial settlement?*"
+                                        required />
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="sr-only d-none" for="arrangement">Parenting Arrangement:</label>
+                                    <span class='icon icon-name'><img src="./assets/prod/svgs/icon-arrangement.svg"
+                                            alt="Icon arrangement"></span>
+                                    <input type="text" class="arrangement" name="Parenting Arrangement Required?"
+                                        id="arrangement" placeholder="Do you require a parenting arrangement?*"
+                                        required />
+                                </div>
 
                                 <div class="form-group">
                                     <label class="sr-only d-none" for="message">Questions:</label>
